# MotionGlove

./: Cargo.toml  README.md  setup.sh
dongle/: Cargo.toml  build.rs
dongle/.cargo/: config.toml
dongle/src/: hid.rs  lib.rs  main.rs  tcp_server.rs
dongle_firmware/: Cargo.toml
dongle_firmware/.cargo/: config.toml
dongle_firmware/src/: hid.rs  lib.rs  main.rs  tcp_server.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: blinker.rs  lib.rs  main.rs  mpu.rs  sensors.rs  tcp_client.rs  usb_logger.rs
glove/: Cargo.toml
glove/src/: flexes.rs  lib.rs  main.rs  sensors.rs  tcp_client.rs
programs/plotter/: Cargo.toml
programs/plotter/src/: main.rs
shared/: Cargo.toml
shared/src/: custom_hid.rs  definitions.rs  lib.rs
src/: main.rs  mpu.rs
