[package]
name = "mape_2025"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", package = "embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time     = { git = "https://github.com/embassy-rs/embassy", package = "embassy-time",     features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp       = { git = "https://github.com/embassy-rs/embassy", package = "embassy-rp",       features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", package = "embassy-usb-logger"}

cyw43     = { git = "https://github.com/embassy-rs/embassy", package = "cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", package = "cyw43-pio", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"



#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"


mpu6050-async = { git = "https://github.com/kalkyl/mpu6050-async.git" }


[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

