[package]
name = "firmware"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-executor    = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time        = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp          = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb-logger  = { version = "0.5.1" }

cyw43               = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio           = { version = "0.8.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"

mpu6050-dmp = { git = "https://github.com/barafael/mpu6050-dmp-rs.git", features = ["async"]}

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

