[package]
name = "glove"
version = "0.1.0"
edition = "2024"

[dependencies]
shared              = { path = "../shared" }

embassy-executor    = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time        = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp          = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb-logger  = { version = "0.5.1" }
embassy-net         = { version = "0.7.1", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-sync        = { version = "0.7.2", features = ["defmt"] }

cyw43               = { version = "0.5.0", features = ["defmt", "firmware-logs"] }
cyw43-pio           = { version = "0.8.0", features = ["defmt"] }

defmt               = "1.0.1"
defmt-rtt           = "1.0.0"

#cortex-m           = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m            = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt         = "0.7.0"
critical-section    = "1.1"
panic-probe         = { version = "0.3", features = ["print-defmt"] }

embedded-io-async   = { version = "0.6.1", features = ["defmt-03"] }

static_cell         = "2.1"
portable-atomic     = { version = "1.5", features = ["critical-section"] }
log                 = "0.4"
heapless            = "0.8.0"
usbd-hid            = "0.8.1"
libm                = "0.2.15"

mpu9250-async       = { git = "https://github.com/mirko-geno/mpu9250-async-rs.git", rev = "f6db572", features = ["async"]}